fix: search results not showing, light/dark toggle not focusing

--- a/css/main.css
+++ b/css/main.css
@@ -72,7 +72,7 @@
     @apply bg-primary-five;
   }
 
-  input:active {
+  input:active:not(#search) {
     @apply border-primary-one;
   }
 
